# functions/swagger.json
@@ -275,6 +275,36 @@
         } 
       } 
     },
+    "/bucket/folder": { 
+      "post": { 
+        "tags": ["Bucket"], 
+        "summary": "Créer un dossier",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": { "$ref": "#/definitions/Folder" },
+            "description": "Paramètres de création d'un dossier"
+          }
+        ],
+        "responses": { 
+          "200": { 
+            "description": "Dossier créé avec succès !"
+          },
+          "400": { 
+            "description": "Erreur lors de la création du dossier !"
+          } 
+        } 
+      } 
+    },
     "/bucket/rename": { 
       "put": { 
         "tags": ["Bucket"], 
@@ -465,6 +495,17 @@
           "format": "binary"
         },
         "path": {
+          "type": "string"
+        }
+      }
+    },
+    "Folder": {
+      "required": ["path", "name"],
+      "properties": {
+        "path": {
+          "type": "string"
+        },
+        "name": {
           "type": "string"
         }
       }
